--- a/digital and analog signals/analag and digital signs.html
+++ b/digital and analog signals/analag and digital signs.html
@@ -1,38 +1,59 @@
+<h1><span style="color: #000000;"><img 
+src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" 
+width="215" height="41" /></span></h1>
 <h1><span style="color: #000000;">Analog and Digital Signals</span></h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 399px;" width="816">
 <tbody>
 <tr>
-<td style="width: 311.625px;">
-<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/digital%20and%20analog%20signals/Analog-Signal-Vs-digital-Signal.jpg" alt="" width="390" height="191" /></p>
-<h3>&nbsp;</h3>
-<h3>&nbsp;</h3>
-</td>
-<td style="width: 500.375px; text-align: justify;">
-<p><span style="font-size: 14px;"><strong>An&nbsp;analog&nbsp;signal is a kind of signal that is continuously variable, as opposed to having a&nbsp;limited number of steps along its range (called&nbsp;digital). A well-known example of&nbsp;analog vs. digital is that of clocks: analog being the type with pointers that slowly&nbsp;rotate around a circular scale, and digital being the type with decimal number displays.</strong></span></p>
-<p><span style="font-size: 14px;"><strong><br />The analog clock has no physical limit to how finely it can display the time, as its&nbsp;&ldquo;hands&rdquo; move in a smooth, pauseless fashion. The digital clock, on the other hand, cannot convey any unit of time different than what its display will allow for.</strong></span></p>
-<p>You won&acute;t miss the&nbsp;<a href="https://www.youtube.com/watch?v=RQc_frX50BA" target="_blank" rel="noopener">Difference between analog and digital signs</a>&nbsp;after watching this video.</p>
-</td>
-</tr>
+<td style="width: 399.766px;">
+<h3 style="text-align: center;">Analog Signals</h3>
+<table style="height: 345px; width: 379px;">
+<tbody>
 <tr>
-<td style="width: 311.625px;">
-<h3>&nbsp;</h3>
-<h3>&nbsp;</h3>
-<h3><span style="text-decoration: underline; font-size: 14px;"><strong>Analogue Signals for your project</strong></span></h3>
-<p style="text-align: justify;">Our world is analogue, with infinite values of, for example, sounds, or colour values.&nbsp;</p>
-<p style="text-align: justify;">With an Arduino board, you use the analogue pins to read spans of values from&nbsp;sensors, or the Pulse Width Modulation (PWM) pins marked with a ~(tilde) symbol to&nbsp;control the current flow to a connected component.</p>
-<p style="text-align: justify;">On a Raspberry Pi, there are no pure analogue input pins, and so two alternative&nbsp;options are made the scene. The 1st option is to use a specially designed A/D circuit&nbsp;chip (a Raspberry Pi &ldquo;hat&rdquo;). The 2nd option is to use an Arduino as an analogue sensor&nbsp;board, in conjunction with the Snap4Arduino software package.</p>
-<p style="text-align: justify;">When need for&nbsp;analogue output (indeed, pseudo-analogue output), the PWM option is a feasible&nbsp;solution using the Raspberry Pi unit as well, in a similar way as in case of Arduino.&nbsp;More specifically, special libraries add PWM functionality to Raspberry Pi GPIO pins.</p>
-<p style="text-align: justify;">Last but not least, is the option to use an Arduino as a pseudo-analogue pin board,&nbsp;assisted by the Snap4Arduino software package.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</td>
-<td style="width: 500.375px;">
-<p><span style="text-decoration: underline; font-size: 14px;"><strong>Digital Signals for your project</strong></span></p>
-<p style="text-align: justify;">Digital signals have a set span of values.<br />When you use an Arduino, digital signals are either On or Off - &lsquo;HIGH&rsquo; or &lsquo;LOW&rsquo; - 0V or&nbsp;5V/3.3V. On an Arduino board, there are 14 digital pins that can be used to write or&nbsp;read to and from electronic components.</p>
-<p style="text-align: justify;">On a Raspberry Pi, there is a considerable number of digital inputs/outputs on its 40-pin connector that comply with 3.3V logic. More specifically, 3.3V logic levels means&nbsp;that the Raspberry Pi will interpret anything very close to zero volts as a logic &lsquo;0&rsquo; and&nbsp;anything higher than around 2V as a logic &lsquo;1&rsquo;. Applying higher voltage levels on these&nbsp;pins could damage the board. These pins can be programmed to intercept signals from&nbsp;digital input devices (sensors) or to control output devices (actuators).</p>
-<p style="text-align: justify;">A very interesting alternative is to use an Arduino board (plugged in a USB port of the&nbsp;Raspberry Pi unit) as an extension board for the Raspberry Pi that provides extra digital pins. Snap4Arduino tool offers the necessary visual programming command options.</p>
-<p style="text-align: justify;">When you create interactive projects, you need to take both the analogue and the digital world into account!</p>
+<td style="width: 372.266px;">
+<p style="font-size: 16px;">Our world is analogue, with infinite values of for example sounds, or 
+colour values.</p>
+<p style="font-size: 16px;">With an Arduino board, you use the analogue pins to read spans of values 
+from sensors, or the Pulse Width Modulation (PWM) pins marked with a ~(tilde) symbol to control the 
+current flow to a connected component.</p>
+<p style="font-size: 16px;">On a Raspberry Pi, there are no pure analogue input pins, hence two 
+alternative options are made the scene. The 1st option is to use a specially designed A/D circuit 
+chip (a Raspberry Pi &ldquo;hat&rdquo;). The 2nd option is to use an Arduino as an analogue sensor 
+board, in conjunction with the Snap4Arduino software package.</p>
 </td>
 </tr>
 </tbody>
 </table>
+<p>&nbsp;</p>
+</td>
+<td style="width: 403.516px;">
+<h3 style="text-align: center;">Digital Signals</h3>
+<table style="height: 31px;" width="347">
+<tbody>
+<tr>
+<td style="width: 339.766px;">
+<p style="font-size: 16px;">Digital signals have a set span of values.</p>
+<p style="font-size: 16px;">When you use an Arduino, digital signals are either On or Off - 
+&lsquo;HIGH&rsquo; or &lsquo;LOW&rsquo; - 0V or 5V/3.3V. On an Arduino board, there are 14 digital 
+pins that can be used to write or read to and from electronic components.</p>
+<p style="font-size: 16px;">On a Raspberry Pi, there is a considerable number of digital 
+inputs/outputs on its 40-pin connector that comply with 3.3V logic.</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</p>
+<h3 style="text-align: justify; font-size: 16px;">You won&acute;t miss the&nbsp;difference between 
+analog and digital signs&nbsp;after watching this <a href="https://www.youtube.com/watch?
+v=RQc_frX50BA" target="_blank" rel="noopener">video.</a></h3>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/digital%20and
+%20analog%20signals/Digital%20and%20analog%20signal.docx?raw=true"><button type="button">Click 
+here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;">&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" 
+alt="" width="330" height="66" />&nbsp;</p>
+<p>&nbsp;</p>
