--- a/digital and analog signals/analag and digital signs.html
+++ b/digital and analog signals/analag and digital signs.html
@@ -50,8 +50,7 @@ v=RQc_frX50BA" target="_blank" rel="noopener">video.</a></h3>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/digital%20and
-%20analog%20signals/Digital%20and%20analog%20signal.docx?raw=true"><button type="button">Click 
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/digital%20and%20analog%20signals/Digital%20and%20analog%20signal.pdf"><button type="button">Click 
 here</button></a>&nbsp;to download this file.</p>
 <p style="font-size: 16px;">&nbsp;</p>
 <p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" 
