--- a/flex sensor/flex sensor.html
+++ b/flex sensor/flex sensor.html
@@ -16,7 +16,7 @@
 </tbody>
 </table>
 <p style="font-size: 16px;">This video about&nbsp;<span style="color: #000000;"><strong><a href="https://www.youtube.com/watch?v=1TfKs-PUL4U" target="_blank" rel="noopener">Flex sensor</a>&nbsp;makes everything simple!</strong></span></p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/flex%20sensor/Flex%20sensor.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/flex%20sensor/Flex%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
