--- a/gyroscope sensor/gyroscope.html
+++ b/gyroscope sensor/gyroscope.html
@@ -19,6 +19,6 @@
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/blob/master/gyroscope%20sensor/Gyroscope.docx?raw=true"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/gyroscope%20sensor/Gyroscope.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p>&nbsp;</p>
 <p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
