--- a/Ultimaker 3 Quick Start Guide/paging.html
+++ b/Ultimaker 3 Quick Start Guide/paging.html
@@ -15,3 +15,9 @@
 		</p>
 	</body>
 </html>
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Ultimaker%203%20Quick%20Start
+
+%20Guide/Ultimaker%203%20Quick%20Start%20Guide.pdf"><button type="button">Click 
+
+here</button></a>&nbsp;to download this file.&nbsp;</p>
